--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="fn.css">
   <link rel="stylesheet" href="aaa.css">
   <link rel="stylesheet" href="ss.css">
+  <link rel="stylesheet" href="123.html">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
@@ -82,7 +83,7 @@
     <li class="nav-item"><a class="nav-link active" href="https://en.wikipedia.org/wiki/Royal_Enfield"><u id="aaa">Company</u></a></li>
     <li class="nav-item"><a class="nav-link" href="https://www.royalenfield.com/in/en/royal-enfield-wingman/"><u id="aaa">Advance Features</u></a></li>
     <li class="nav-item"><a class="nav-link" href="https://www.google.com/search?q=royal+enfield+models"><u id="aaa">Models</u></a></li>
-    <li class="nav-item"><a class="nav-link disabled" aria-disabled="true"><u id="aaa">Rating</u></a></li>
+    <li class="nav-item"><a class="nav-link" href="https://www.bikewale.com/royalenfield-bikes/bullet/reviews/"><u id="aaa">Rating</u></a></li>
   </ul>
 
   <!-- Carousel -->
@@ -219,10 +220,10 @@
         </div>
         <div class="col-md-3">
           <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Quick Links</h5>
-          <p><a href="#" class="text-white text-decoration-none">Home</a></p>
-          <p><a href="#" class="text-white text-decoration-none">Motorcycles</a></p>
-          <p><a href="#" class="text-white text-decoration-none">Riding Gear</a></p>
-          <p><a href="#" class="text-white text-decoration-none">Service</a></p>
+          <p><a href="index.html" class="text-white text-decoration-none">Home</a></p>
+          <p><a href="https://www.royalenfield.com/in/en/motorcycles/" class="text-white text-decoration-none">Motorcycles</a></p>
+          <p><a href="https://store.royalenfield.com/en/riding-gear/helmet?utm_source=google&utm_medium=cpc&utm_campaign=riding-helmets&utm_term=exact&campaign=%7Bcampaignname%7D&adgroupid=132900539759&keyword=royal+enfield+helmet&gad_source=1&gbraid=0AAAAAB0wMegC83XA06FcaoSVa1JnKATbq&gclid=EAIaIQobChMI1sT6iK7ejAMVr14PAh0n0iiMEAAYASAAEgLDVPD_BwE" class="text-white text-decoration-none">Riding Gear</a></p>
+          <p><a href="https://www.royalenfield.com/in/en/service" class="text-white text-decoration-none">Service</a></p>
         </div>
         <div class="col-md-5">
           <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Contact</h5>
@@ -239,10 +240,10 @@
           <p>© 2025 Royal Enfield. All Rights Reserved.</p>
         </div>
         <div class="col-md-5 text-md-end">
-          <a href="#" class="btn btn-outline-light m-1"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="btn btn-outline-light m-1"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="btn btn-outline-light m-1"><i class="fab fa-youtube"></i></a>
-          <a href="#" class="btn btn-outline-light m-1"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com/RoyalEnfield/" class="btn btn-outline-light m-1"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/royalenfield/?hl=en" class="btn btn-outline-light m-1"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.youtube.com/channel/UCyxUUHqmz9IiAnrROJc0mag" class="btn btn-outline-light m-1"><i class="fab fa-youtube"></i></a>
+          <a href="https://x.com/royalenfield?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="btn btn-outline-light m-1"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
     </div>
