--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <a class="nav-link" href="https://www.royalenfield.com/in/en/motorcycles/">Motorcycles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://en.wikipedia.org/wiki/Royal_Enfield">Company</a>
+            <a class="nav-link" href="https://www.royalenfield.com/in/en/our-world/since-1901/">Company</a>
           </li>
         
 
